--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "yiisoft/yii2": "^2.0.6",
-        "@bower/polyglot": "^0.4.3"
+        "bower-asset/polyglot": "^0.4.3"
     },
     "autoload": {
         "psr-4": {
