--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "yiisoft/yii2": "^2.0.6",
+        "yiisoft/yii2": "~2.0.6",
         "bower-asset/polyglot": "^0.4.3"
     },
     "autoload": {
